<resources>
    <string name="app_name">PassManager</string>
    <string name="action_settings">Settings</string>


    <string name="add_entry_name">Name for this password</string>
    <string name="add_entry_password">Password</string>
    <string name="add_entry_type">Type</string>

    <string name="type_website">Website</string>
    <string name="type_app">App</string>
    <string name="type_email">Email</string>
    <string name="type_bank">Bank</string>
    <string name="type_utility">Utility</string>
    <string name="type_other">Other</string>

    <string name="save_button">Add</string>
    <string name="update_button">Update</string>

    <string name="add_pass_label">Add Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_reset">Reset</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_password">Wrong password!</string>
    <string name="login_failed">"Login failed"</string>


</resources>