<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- EditText for entry description input -->
    <EditText
        android:id="@+id/et_entry_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/add_entry_name"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <!-- EditText for entry password input -->
    <EditText
        android:id="@+id/et_entry_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/add_entry_password"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <!-- TextView for Type Selection -->
    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_entry_type"
        android:textColor="@android:color/primary_text_light" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:weightSum="6">

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/type_email"
            android:checked="true"
            android:theme="@style/AppTheme" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/type_app"
            android:theme="@style/AppTheme" />

        <RadioButton
            android:id="@+id/radButton3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/type_website"
            android:theme="@style/AppTheme" />

        <RadioButton
            android:id="@+id/radButton4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/type_bank"
            android:theme="@style/AppTheme" />

        <RadioButton
            android:id="@+id/radButton5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/type_utility"
            android:theme="@style/AppTheme" />

        <RadioButton
            android:id="@+id/radButton6"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/type_other"
            android:theme="@style/AppTheme" />

    </RadioGroup>

    <!-- Add button -->
    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/save_button"
        android:textColor="@android:color/primary_text_dark" />

</LinearLayout>
</layout>